[workspace]
members = [
    "escrow",
    "registry",
    "arbitration",
]
resolver = "2"

[workspace.package]
authors = ["GLIN Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/glin/glin-chain"
version = "0.1.0"

[workspace.dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

[profile.release]
overflow-checks = false
panic = "abort"
lto = true

[profile.dev]
overflow-checks = false
